--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -4,18 +4,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:orientation="vertical">
 
     <Button
-        android:onClick="openLiveEventDemo"
-        android:text="Full Live Data 示例"
+        android:onClick="openLikeLiveDataDemo"
+        android:text="示例—像LiveData一样"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <Button
-        android:onClick="openLiveBackgroundEventDemo"
-        android:text="Background Event 示例"
+        android:onClick="openNoStickyLiveEventDemo"
+        android:text="示例—没有粘性行为"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:onClick="openNoLossLiveEventDemo"
+        android:text="示例—没有丢弃行为"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:onClick="openNoStickyNoLossLiveEventDemo"
+        android:text="示例—没有粘性行为且没有丢弃行为"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:onClick="openMixedLiveEventDemo"
+        android:text="示例—可混合观察的LiveEvent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:onClick="openMixedBackgroundLiveEventDemo"
+        android:text="示例—可混合观察的BackgroundLiveEvent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:onClick="openSpecifiedThreadToObserveEventDemo"
+        android:text="示例—BackgroundLiveEvent指定线程接收event"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
