考虑嵌套调用setValue丢失事件的情况，去除指定全局事件分发器，demo修改

--- a/demo/src/main/res/layout/activity_mixed_background_live_event.xml
+++ b/demo/src/main/res/layout/activity_mixed_background_live_event.xml
@@ -9,71 +9,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
-        android:orientation="horizontal"
-        tools:ignore="UselessParent">
-
-        <Button
-            android:id="@+id/post1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
-
-            android:layout_weight="1"
-            android:gravity="center"
-            android:minHeight="15dp"
-
-            android:text="postValue"
-            android:textColor="@android:color/black"
-            android:textSize="12sp" />
-
-        <Button
-            android:id="@+id/postM"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
-
-            android:layout_weight="1"
-            android:gravity="center"
-            android:minHeight="15dp"
-
-            android:text="5次postValue"
-            android:textColor="@android:color/black"
-            android:textSize="12sp" />
-
-        <Button
-            android:id="@+id/set1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
-
-            android:layout_weight="1"
-            android:gravity="center"
-            android:minHeight="15dp"
-
-            android:text="setValue"
-            android:textColor="@android:color/black"
-            android:textSize="12sp" />
-
-        <Button
-            android:id="@+id/setM"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
-
-            android:layout_weight="1"
-            android:gravity="center"
-            android:minHeight="15dp"
-
-            android:text="5次setValue"
-            android:textColor="@android:color/black"
-            android:textSize="12sp" />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:orientation="vertical">
 
 
@@ -87,7 +22,7 @@
             <Button
                 android:id="@+id/observe"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
 
                 android:layout_weight="1"
@@ -101,7 +36,7 @@
             <Button
                 android:id="@+id/observeForever"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
 
                 android:layout_weight="1"
@@ -115,7 +50,7 @@
             <Button
                 android:id="@+id/observeNoSticky"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
 
                 android:layout_weight="1"
@@ -129,7 +64,7 @@
             <Button
                 android:id="@+id/observeForeverNoSticky"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
 
                 android:layout_weight="1"
@@ -151,7 +86,7 @@
             <Button
                 android:id="@+id/observe1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
 
                 android:layout_weight="1"
@@ -165,7 +100,7 @@
             <Button
                 android:id="@+id/observeForever1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
 
                 android:layout_weight="1"
@@ -179,7 +114,7 @@
             <Button
                 android:id="@+id/observeNoSticky1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
 
                 android:layout_weight="1"
@@ -193,7 +128,7 @@
             <Button
                 android:id="@+id/observeForeverNoSticky1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
 
                 android:layout_weight="1"
@@ -216,7 +151,7 @@
             <Button
                 android:id="@+id/observeNoLoss"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
                 android:layout_marginTop="2dp"
                 android:layout_marginBottom="2dp"
@@ -231,7 +166,7 @@
             <Button
                 android:id="@+id/observeForeverNoLoss"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
                 android:layout_marginTop="2dp"
                 android:layout_marginBottom="2dp"
@@ -246,7 +181,7 @@
             <Button
                 android:id="@+id/observeNoStickyNoLoss"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
                 android:layout_marginTop="2dp"
                 android:layout_marginBottom="2dp"
@@ -261,7 +196,7 @@
             <Button
                 android:id="@+id/observeForeverNoStickyNoLoss"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
                 android:layout_marginTop="2dp"
                 android:layout_marginBottom="2dp"
@@ -285,7 +220,7 @@
             <Button
                 android:id="@+id/observeNoLoss1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
 
                 android:layout_weight="1"
@@ -299,7 +234,7 @@
             <Button
                 android:id="@+id/observeForeverNoLoss1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
 
                 android:layout_weight="1"
@@ -313,7 +248,7 @@
             <Button
                 android:id="@+id/observeNoStickyNoLoss1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
 
                 android:layout_weight="1"
@@ -327,7 +262,7 @@
             <Button
                 android:id="@+id/observeForeverNoStickyNoLoss1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
 
                 android:layout_weight="1"
@@ -340,6 +275,70 @@
         </LinearLayout>
 
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:orientation="horizontal"
+        tools:ignore="UselessParent">
+
+        <Button
+            android:id="@+id/post1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+
+
+            android:layout_weight="1"
+            android:gravity="center"
+            android:minHeight="15dp"
+
+            android:text="postValue"
+            android:textColor="@android:color/black"
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/postM"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+
+
+            android:layout_weight="1"
+            android:gravity="center"
+            android:minHeight="15dp"
+
+            android:text="5次postValue"
+            android:textColor="@android:color/black"
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/set1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+
+
+            android:layout_weight="1"
+            android:gravity="center"
+            android:minHeight="15dp"
+
+            android:text="setValue"
+            android:textColor="@android:color/black"
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/setM"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+
+
+            android:layout_weight="1"
+            android:gravity="center"
+            android:minHeight="15dp"
+
+            android:text="5次setValue"
+            android:textColor="@android:color/black"
+            android:textSize="12sp" />
     </LinearLayout>
 
     <LinearLayout
