--- a/demo/src/main/res/layout/activity_mutable.xml
+++ b/demo/src/main/res/layout/activity_mutable.xml
@@ -9,70 +9,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
-        android:orientation="horizontal"
-        tools:ignore="UselessParent">
-
-        <Button
-            android:id="@+id/post1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
-
-            android:layout_weight="1"
-            android:gravity="center"
-            android:minHeight="15dp"
-
-            android:text="postValue"
-            android:textColor="@android:color/black"
-            android:textSize="12sp" />
-
-        <Button
-            android:id="@+id/postM"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
-
-            android:layout_weight="1"
-            android:gravity="center"
-            android:minHeight="15dp"
-
-            android:text="5次postValue"
-            android:textColor="@android:color/black"
-            android:textSize="12sp" />
-
-        <Button
-            android:id="@+id/set1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
-
-            android:layout_weight="1"
-            android:gravity="center"
-            android:minHeight="15dp"
-
-            android:text="setValue"
-            android:textColor="@android:color/black"
-            android:textSize="12sp" />
-
-        <Button
-            android:id="@+id/setM"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
-
-            android:layout_weight="1"
-            android:gravity="center"
-            android:minHeight="15dp"
-
-            android:text="5次setValue"
-            android:textColor="@android:color/black"
-            android:textSize="12sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:orientation="vertical">
 
 
@@ -86,7 +22,7 @@
             <Button
                 android:id="@+id/observe"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:minHeight="15dp"
@@ -97,7 +33,7 @@
             <Button
                 android:id="@+id/observe1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:minHeight="15dp"
@@ -108,7 +44,7 @@
             <Button
                 android:id="@+id/observeForever"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:minHeight="15dp"
@@ -120,7 +56,7 @@
             <Button
                 android:id="@+id/observeForever1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
 
                 android:layout_weight="1"
@@ -134,6 +70,70 @@
         </LinearLayout>
 
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:orientation="horizontal"
+        tools:ignore="UselessParent">
+
+        <Button
+            android:id="@+id/post1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+
+
+            android:layout_weight="1"
+            android:gravity="center"
+            android:minHeight="15dp"
+
+            android:text="postValue"
+            android:textColor="@android:color/black"
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/postM"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+
+
+            android:layout_weight="1"
+            android:gravity="center"
+            android:minHeight="15dp"
+
+            android:text="5次postValue"
+            android:textColor="@android:color/black"
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/set1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+
+
+            android:layout_weight="1"
+            android:gravity="center"
+            android:minHeight="15dp"
+
+            android:text="setValue"
+            android:textColor="@android:color/black"
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/setM"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+
+
+            android:layout_weight="1"
+            android:gravity="center"
+            android:minHeight="15dp"
+
+            android:text="5次setValue"
+            android:textColor="@android:color/black"
+            android:textSize="12sp" />
     </LinearLayout>
 
     <LinearLayout
